# agentstack

./: .editorconfig  .env  .env.example  .env.local.example  .env.production.example  .flake8  .gitignore  BUILD  LICENSE  Makefile  README.md  constraints.txt  debug_agent.py  debug_chat_retrieval.py  debug_crag_agent.py  docker-compose.yaml  kubernetes.manifests.yml  openapi.yaml  pants.toml  pyproject.toml  pytest-requirements.txt  requirements.txt  test.json  test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test_db_conn.py
.github/workflows/: pr-ui.yml  pr.yml
contrib/postgresql/: Dockerfile  setup-internal.sql
contrib/qdrant/: config.yaml  development.yaml
docs/: assistants.md  auth_guide.md  rag.md  troubleshooting.md
migrations/: README  env.py  script.py.mako
migrations/versions/: 1091347b4ab9_alter_checkpoints_table.py  42cb7889f092_init.py  af0a5f3e2816_auth.py  dc27d3e10363_file_tracking.py  e1338e81c83d_add_relationships.py  fa2c17415189_add_checkpoints_table.py  fd264e716c5d_remove_checkpoints_table.py
pyserver/: .dockerignore  BUILD  Dockerfile  alembic.ini  dev.sh  pyproject.toml
pyserver/app/: app_factory.py  main.py  start.py
pyserver/app/agents/: __init__.py  chatbot.py  configurable_agent.py  openai_agent.py  retrieval.py  tools.py  tools_agent.py  xml_agent.py
pyserver/app/api/: annotations.py
pyserver/app/api/v1/: __init__.py  assistants.py  feedback.py  files.py  messages.py  rag.py  runs.py  threads.py  users.py
pyserver/app/api/v1/__tests__/: users.spec.py
pyserver/app/cache/: __init__.py  cache.py
pyserver/app/chains/: __init__.py  universal_retrieval_chain.py
pyserver/app/core/: __init__.py  api_key.py  configuration.py  datastore.py  exception.py  llms.py  logger.py  pg_checkpoint_saver.py  retriever.py  struct_logger.py
pyserver/app/data/: activities_mock_dataset_final.json  mock_activities_dataset_final.csv
pyserver/app/llms/: __init__.py  llms.py  load_model_local.py
pyserver/app/middlewares/: __init__.py  request_logger.py  system_logger.py
pyserver/app/models/: assistant.py  base.py  checkpoint.py  file.py  message.py  request_log.py  thread.py  user.py  util.py
pyserver/app/rag/: custom_retriever.py  embedding_service.py  ingest.py  ingest_runnable.py  parsing.py  query.py  splitter.py  summarizer.py  upload.py
pyserver/app/repositories/: __init__.py  assistant.py  base.py  file.py  message.py  thread.py  user.py
pyserver/app/schema/: __init__.py  assistant.py  common.py  feedback.py  file.py  message.py  message_types.py  rag.py  thread.py  title.py  token.py  user.py
pyserver/app/utils/: __init__.py  file_helpers.py  format_docs.py  group_threads.py  helpers.py  stream.py  stream_messages.py  tracing.py  transform_stream_for_client.py  vector_collection.py
pyserver/app/utils/tests/unit/: test_format_docs.py
pyserver/app/vectordbs/: __init__.py  base.py  qdrant.py
pyserver/migrations/: README  env.py
pyserver/migrations/versions/: 42cb7889f092_init.py  dc27d3e10363_file_tracking.py  fa2c17415189_add_checkpoints_table.py
pyserver/tests/unit/: test_format_docs.py
scripts/: db_management.sh  setup_default_user.py
stack/: .flake8  BUILD  Dockerfile  dev.sh  start.py
stack/app/: BUILD  app_factory.py  main.py
stack/app/agents/: chatbot.py  chatbot_executor.py  configurable_agent.py  configurable_chatbot.py  configurable_crag.py  configurable_retrieval.py  corrective_action_executor.py  corrective_rag.py  crag_action_executor_v1.py  crag_executor.py  crag_executor_original.py  crag_message.py  llm.py  retrieval.py  retrieval_executor.py  tools.py  tools_agent.py  tools_agent_executor.py  xml_agent.py
stack/app/api/: annotations.py
stack/app/chains/: universal_retrieval_chain.py
stack/app/core/: api_key.py  configuration.py  datastore.py  lifespan.py  llms.py  logger.py  pg_checkpoint_saver.py  redis.py  retriever.py  struct_logger.py
stack/app/llms/: load_model_local.py
stack/app/middlewares/: __init__.py  request_logger.py  system_logger.py
stack/app/model/: assistant.py  base.py  blacklist.py  checkpoint.py  file.py  message.py  request_log.py  thread.py  user.py
stack/app/models/: assistant.py  checkpoint.py  file.py  message.py  request_log.py  thread.py  user.py  util.py
stack/app/rag/: custom_retriever.py  embedding_service.py  ingest.py  ingest_runnable.py  query.py  splitter.py  summarizer.py  util.py
stack/app/repositories/: assistant.py  base.py  blacklist.py  file.py  message.py  thread.py  user.py
stack/app/schema/: assistant.py  auth.py  common.py  feedback.py  file.py  message.py  message_types.py  rag.py  thread.py  title.py  user.py
stack/app/utils/: BUILD  exceptions.py  file_helpers.py  format_docs.py  group_threads.py  stream.py  transform_stream_for_client.py
stack/app/vectordbs/: __init__.py  base.py  qdrant.py
stack/migrations/: env.py
stack/migrations/versions/: 42cb7889f092_init.py  dc27d3e10363_file_tracking.py
stack/tests/integration/: BUILD  PersonaFlow.postman_collection.json  conftest.py  openapi.json  test_imports.py
stack/tests/unit/: BUILD  conftest.py  test_app.py  test_app_admin_users.py  test_app_assistants.py  test_app_auth.py  test_app_files.py  test_app_runs.py  test_app_threads.py  test_app_users.py  test_auth.py  test_authorization_header.py  test_basic_auth.py  test_utils_group_threads.py
ui/: .babelrc  .env.local.example  .prettierignore  .prettierrc  components.json  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.ts
ui/src/: mockFiles.ts  store.ts
ui/src/app/: layout.tsx  not-found.tsx  page.tsx
ui/src/components/: Header.tsx  Sidebar.tsx
ui/src/contexts/: providers.tsx
ui/src/data-provider/: data-service.ts  endpoints.ts  index.ts  query-service.ts  requests.ts  types.ts
ui/src/hooks/: stream.ts  useAvailableTools.ts  useChat.ts  useChat.tsx  useConfig.ts  useConfigSchema.ts  useFileStream.ts  useSlugParams.ts  useStream.ts
ui/src/lib/: utils.ts
ui/src/pages/: page.tsx
ui/src/providers/: Providers.tsx
ui/src/styles/: main.css
(+142 files in other folders)
