[tool.poetry]
name = "personaflow"
version = "0.1.0"
description = ""
authors = ["PersonaFlow"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
openai = "^1.7.2"
fastapi = "^0.103.2"
pydantic = "^2.0.1"
uvicorn = "^0.23.2"
asyncio = "^3.4.3"
python-dotenv = "^1.0.0"
jq = "^1.6.0"
loguru = "^0.7.2"
pyjwt = "^2.8.0"
pypdf = "^4.0.1"
redis = "^5.0.1"
langsmith = "^0.1.31"
langchain-core = "^0.1.44"
langchain-community = "^0.0.34"
langchain = "^0.1.16"
orjson = "^3.9.13"
langgraph = "^0.0.38"
sse-starlette = "^2.0.0"
langchain-anthropic = "^0.1.8"
langchain-google-vertexai = "^1.0.1"
fireworks-ai = "^0.11.2"
cohere = ">=4.32,<5.0"
urllib3 = "1.26.18"
boto3 = "^1.34.105"

semantic-router = { extras = ["processing"], version = ">=0.0.34" }
tiktoken = "^0.6.0"

alembic = "^1.11.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.27" }
asyncpg = "^0.28.0"
structlog = "^23.1.0"
rich = "^13.5.2"
colorama = "^0.4.6"
pydantic-settings = "^2.0.2"
asgi-correlation-id = "^4.2.0"
python-multipart = "^0.0.9"

duckduckgo-search = "^4.4"
wikipedia = "^1.4.0"
arxiv = "^2.1.0"
xmltodict = "^0.13.0"
beautifulsoup4 = "^4.12.3"
pdfminer-six = "^20221105"
psycopg2-binary = "^2.9.9"
qdrant-client = "^1.8.0"
azure-monitor-opentelemetry = "^1.3.0"
dataclasses-json = "^0.6.4"
unstructured-client = "^0.22.0"
langchain-robocorp = "^0.0.5"
langchain-openai = "^0.1.3"
pytest = "^8.2.2"
factory-boy = "^3.3.0"
httpx = "^0.25.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
pytest-socket = "^0.6.0"
pytest-cov = "^5.0.0"
langfuse = "^2.36.1"
arize-phoenix = {extras = ["evals"], version = "^4.4.3"}
bcrypt = "^4.1.3"
itsdangerous = "^2.2.0"
freezegun = "^1.5.1"
Authlib = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

